load("@pybind11_bazel//:build_defs.bzl", "pybind_extension", "pybind_library")
load("@rules_python//python:packaging.bzl", "py_package", "py_wheel")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "package",
    srcs = [
        "__init__.py",
    ],
    deps = [
        "//heu/pybind:phe_binding",
    ],
)

py_package(
    name = "phe_pkg",
    deps = [
        ":package",
    ],
)

py_wheel(
    name = "heu_wheel",
    abi = "abi3",
    distribution = "sf_heu",
    license = "Apache 2.0",
    platform = select({
        "@bazel_tools//src/conditions:darwin_x86_64": "macosx_10_16_x86_64",
        "@bazel_tools//src/conditions:darwin_arm64": "macosx_11_0_arm64",
        "//conditions:default": "manylinux2014_x86_64",
    }),
    python_requires = "==3.8.*",
    python_tag = "cp38",
    version = "0.1.0.b1",
    deps = [":phe_pkg"],
)
