load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")
load("@rules_python//python:defs.bzl", "py_library", "py_test")

package(default_visibility = ["//visibility:public"])

exports_files(
    [
        "exported_symbols.lds",
        "version_script.lds",
    ],
    visibility = ["//visibility:private"],
)

pybind_extension(
    name = "heu",
    srcs = ["heu_modules.cc"],
    linkopts = select({
        "@bazel_tools//src/conditions:darwin": [
            "-Wl,-exported_symbols_list,$(location //heu/pylib:exported_symbols.lds)",
        ],
        "//conditions:default": [
            "-Wl,--version-script,$(location //heu/pylib:version_script.lds)",
        ],
    }),
    deps = [
        ":exported_symbols.lds",
        ":version_script.lds",
        "//heu/pylib/numpy_binding",
        "//heu/pylib/phe_binding",
    ],
)

py_library(
    name = "heu_modules",
    data = [
        ":heu.so",
    ],
)

py_test(
    name = "phe_test",
    srcs = ["phe_test.py"],
    imports = ["."],
    deps = [
        ":heu_modules",
    ],
)

py_test(
    name = "numpy_test",
    srcs = ["numpy_test.py"],
    imports = ["."],
    deps = [
        ":heu_modules",
    ],
)

