# Copyright 2024 Ant Group Co., Ltd
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")
load("@rules_python//python:defs.bzl", "py_library", "py_test")

package(default_visibility = ["//visibility:public"])

exports_files(
    [
        "exported_symbols.lds",
        "version_script.lds",
    ],
    visibility = ["//visibility:private"],
)

pybind_extension(
    name = "heu",
    srcs = ["heu_modules.cc"],
    linkopts = select({
        "@bazel_tools//src/conditions:darwin": [
            "-Wl,-exported_symbols_list,$(location //heu/pylib:exported_symbols.lds)",
        ],
        "//conditions:default": [
            "-Wl,--version-script,$(location //heu/pylib:version_script.lds)",
        ],
    }),
    deps = [
        ":exported_symbols.lds",
        ":version_script.lds",
        "//heu/pylib/numpy_binding",
        "//heu/pylib/phe_binding",
    ],
)

py_library(
    name = "heu_modules",
    data = [
        ":heu.so",
    ],
)

py_test(
    name = "phe_test",
    srcs = ["phe_test.py"],
    imports = ["."],
    deps = [
        ":heu_modules",
        "@heu_pypi//numpy:pkg",
    ],
)

py_test(
    name = "numpy_test",
    srcs = ["numpy_test.py"],
    imports = ["."],
    deps = [
        ":heu_modules",
        "@heu_pypi//numpy:pkg",
    ],
)
