# Copyright 2024 Ant Group Co., Ltd
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@yacl//bazel:yacl.bzl", "yacl_cc_library")

package(default_visibility = ["//visibility:public"])

# A collection of SPI and all Libs.
yacl_cc_library(
    name = "spi",
    deps = [
        # This is the ONLY place where SPI needs to rely on implementation libraries.
        # SPI rules do not allow dependence on implementation libraries anywhere else.
        "//heu/algorithms",
    ],
)
