load("@yasl//bazel:yasl.bzl", "yasl_cc_library", "yasl_cc_test")

package(default_visibility = ["//visibility:public"])

test_suite(
    name = "gemini_rlwe_tests",
)

yasl_cc_library(
    name = "gemini_rlwe",
    srcs = [
        "a2h.cc",
        "matvec.cc",
    ],
    hdrs = [
        "a2h.h",
        "matvec.h",
    ],
    deps = [
        ":lwe_decryptor",
        ":lwe_types",
        ":lwe_util",
        ":modswitch",
        ":poly_encoder",
        "@com_github_microsoft_seal//:seal",
    ],
)

yasl_cc_library(
    name = "poly_encoder",
    srcs = [
        "poly_encoder.cc",
    ],
    hdrs = [
        "poly_encoder.h",
    ],
    deps = [
        ":lwe_types",
        ":modswitch",
    ],
)

yasl_cc_library(
    name = "lwe_decryptor",
    srcs = [
        "lwe_decryptor.cc",
    ],
    hdrs = [
        "lwe_decryptor.h",
    ],
    deps = [
        ":lwe_types",
        ":modswitch",
    ],
)

yasl_cc_library(
    name = "lwe_util",
    srcs = [
        "util.cc",
    ],
    hdrs = [
        "util.h",
    ],
    deps = [
        ":lwe_types",
    ],
)

yasl_cc_library(
    name = "lwe_types",
    srcs = [
        "lwe_ct.cc",
        "lwe_secret_key.cc",
    ],
    hdrs = [
        "lwe_types.h",
    ],
    deps = [
        ":modswitch",
        "@com_github_microsoft_seal//:seal",
        "@yasl//yasl/base:buffer",
        "@yasl//yasl/base:byte_container_view",
    ],
)

yasl_cc_library(
    name = "modswitch",
    srcs = ["modswitch_helper.cc"],
    hdrs = ["modswitch_helper.h"],
    deps = [
        "@com_github_microsoft_seal//:seal",
        "@yasl//yasl/base:exception",
        "@yasl//yasl/base:int128",
    ],
)

yasl_cc_test(
    name = "modswitch_helper_test",
    srcs = ["modswitch_helper_test.cc"],
    deps = [
        ":modswitch",
        "@com_google_googletest//:gtest",
    ],
)

yasl_cc_test(
    name = "rlwe_2_lwe_test",
    srcs = ["rlwe_2_lwe_test.cc"],
    deps = [
        ":gemini_rlwe",
    ],
)

yasl_cc_test(
    name = "matvec_test",
    srcs = ["matvec_test.cc"],
    deps = [
        ":gemini_rlwe",
    ],
)

yasl_cc_test(
    name = "a2h_test",
    srcs = ["a2h_test.cc"],
    deps = [
        ":gemini_rlwe",
    ],
)
