load("@yacl//bazel:yacl.bzl", "yacl_cc_library", "yacl_cc_test")
load("@pybind11_bazel//:build_defs.bzl", "pybind_extension", "pybind_library")

package(default_visibility = ["//visibility:public"])

pybind_library(
    name = "traits",
    hdrs = ["traits.h"],
    deps = [
        "//heu/library/phe",
    ],
)

pybind_library(
    name = "py_utils",
    srcs = ["py_utils.cc"],
    hdrs = ["py_utils.h"],
    deps = [
        "//heu/library/phe",
        "@yacl//yacl/base:int128",
    ],
)
