# Copyright 2024 Ant Group Co., Ltd
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@yacl//bazel:yacl.bzl", "yacl_cc_library", "yacl_cc_test")

yacl_cc_library(
    name = "tool",
    srcs = ["tool.cc"],
    hdrs = ["tool.h"],
    deps = [
        "//heu/spi",
        "//heu/spi/utils:formater",
        "@googletest//:gtest",
    ],
)

yacl_cc_test(
    name = "arithmetic_test",
    srcs = [
        "arithmetic_test.cc",
    ],
    deps = [
        ":tool",
    ],
)

yacl_cc_test(
    name = "serialize_test",
    srcs = [
        "serialize_test.cc",
    ],
    deps = [
        ":tool",
    ],
)

yacl_cc_test(
    name = "ckks_test",
    srcs = [
        "ckks_test.cc",
    ],
    deps = [
        ":tool",
    ],
)
