load("@yacl//bazel:yacl.bzl", "yacl_cc_library", "yacl_cc_test")

yacl_cc_library(
    name = "he",
    srcs = ["he_kit.cc"],
    hdrs = ["he_kit.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":decryptor",
        ":encoder",
        ":encryptor",
        ":evaluator",
        ":item_manipulator",
    ],
)

yacl_cc_library(
    name = "item",
    srcs = ["item.cc"],
    hdrs = ["item.h"],
    deps = [
        "@yacl//yacl/utils/spi",
    ],
)

yacl_cc_library(
    name = "item_manipulator",
    hdrs = ["item_manipulator.h"],
    deps = [
        ":item",
    ],
)

yacl_cc_library(
    name = "encryptor",
    hdrs = ["encryptor.h"],
    deps = [
        ":item",
    ],
)

yacl_cc_library(
    name = "decryptor",
    hdrs = ["decryptor.h"],
    deps = [
        ":item",
    ],
)

yacl_cc_library(
    name = "evaluator",
    hdrs = [
        "binary_evaluator.h",
        "gate_evaluator.h",
        "word_evaluator.h",
    ],
    deps = [
        ":item",
    ],
)

yacl_cc_library(
    name = "encoder",
    srcs = ["encoder.h"],
    deps = [":item"],
)

yacl_cc_test(
    name = "item_test",
    srcs = ["item_test.cc"],
    deps = [
        ":item",
    ],
)
